--- a/rk356x/zh/.~00-开发板功能列表.md
+++ b/rk356x/zh/.~00-开发板功能列表.md
@@ -1,41 +1,40 @@
 # 00-开发板功能列表
 
-| Function             | K1                                                           | K1B                                                          |
-| -------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| APPEARANCE           |                                                              |                                                              |
-| SOC                  | RK3568B2                                                     | RK3568B2                                                     |
-| CPU                  | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
-| GPU                  | Mali G52                                                     | Mali G52                                                     |
-| NPU                  | 0.8Tops                                                      | 0.8Tops                                                      |
-| DDR                  | 2G/4G                                                        | 2G/4G                                                        |
-| EMMC                 | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
-| SYSTEM               | Android13.0/Debian11                                         | Android13.0/Debian11                                         |
-| SIZE                 |                                                              |                                                              |
-| Weight               |                                                              |                                                              |
-| POWER                | DC 12V                                                       | Type-C 5V                                                    |
-| FAN                  | Y                                                            | N                                                            |
-| LED                  | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
-| USB3.0 HOST          | X1                                                           | X2                                                           |
-| USB2.0 HOST          | X1                                                           | N                                                            |
-| USB2.0 OTG           | X1                                                           | X1                                                           |
-| IR Receiver          | Y                                                            | N                                                            |
-| RTC                  | Y（HYM8563）                                                 | N                                                            |
-| DEBUG UART           | Y                                                            | Y                                                            |
-| KEY                  | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
-| Extend Pin           | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
-| HDMI OUT             | X1                                                           | X1                                                           |
-| MIPI DSI             | X2                                                           | X1                                                           |
-| LVDS                 | X1                                                           | X1                                                           |
-| EDP                  | X1                                                           | N                                                            |
-| MIPI Camera          | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
-| SPK                  | Y                                                            | Y                                                            |
-| HeadPhone            | Y                                                            | N                                                            |
-| MIC                  | Y                                                            | N                                                            |
-| WIFI/BlueTooth       | Y（RTL8822CS）                                               | Y（RTL8822CS）                                               |
-| Ethernet 1000M       | X2                                                           | X1                                                           |
-| MINI PCIE Mobile 4G  | Y（EC20）                                                    | N                                                            |
-| MINI PCIE PCIE2.0 X1 | Y                                                            | N                                                            |
-| SD Card              | Y                                                            | Y                                                            |
-| SATA3.0              | Y                                                            | N                                                            |
-| M.2 PCIE3.0 SSD      | Y                                                            | N                                                            |
+| Function            | K1                                                           | K1B                                                          |
+| ------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| APPEARANCE          |                                                              |                                                              |
+| SOC                 | RK3568B2                                                     | RK3568B2                                                     |
+| CPU                 | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
+| GPU                 | Mali G52                                                     | Mali G52                                                     |
+| NPU                 | 0.8Tops                                                      | 0.8Tops                                                      |
+| DDR                 | 2G/4G                                                        | 2G/4G                                                        |
+| EMMC                | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
+| SYSTEM              | Android13.0/Debian11                                         | Android13.0/Debian11                                         |
+| SIZE                |                                                              |                                                              |
+| Weight              |                                                              |                                                              |
+| POWER               | DC 12V                                                       | Type-C 5V                                                    |
+| FAN                 | Y                                                            | N                                                            |
+| LED                 | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
+| USB3.0 HOST         | X1                                                           | X2                                                           |
+| USB2.0 HOST         | X1                                                           | N                                                            |
+| USB2.0 OTG          | X1                                                           | X1                                                           |
+| IR Receiver         | Y                                                            | N                                                            |
+| RTC                 | Y（HYM8563）                                                 | N                                                            |
+| DEBUG UART          | Y                                                            | Y                                                            |
+| KEY                 | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
+| Extend Pin          | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
+| HDMI OUT            | X1                                                           | X1                                                           |
+| MIPI DSI            | X2                                                           | X1                                                           |
+| LVDS                | X1                                                           | X1                                                           |
+| EDP                 | X1                                                           | N                                                            |
+| MIPI Camera         | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
+| SPK                 | Y                                                            | Y                                                            |
+| HeadPhone           | Y                                                            | N                                                            |
+| MIC                 | Y                                                            | N                                                            |
+| WIFI/BlueTooth      | Y（RTL8822CS）                                               | Y（RTL8822CS）                                               |
+| Ethernet            | 1000M X2                                                     | 1000M X1                                                     |
+| MINI PCIE Mobile 4G | Y（EC20）                                                    | N                                                            |
+| SD Card             | Y                                                            | Y                                                            |
+| SATA3.0             | Y                                                            | N                                                            |
+| M.2 PCIE3.0 SSD     | Y                                                            | N                                                            |
 
