--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -23,10 +23,10 @@
 | DEBUG UART          | Y                                                            | Y                                                            |
 | KEY                 | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
 | Extend Pin          | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
-| HDMI OUT            | X1                                                           | X1                                                           |
-| MIPI DSI            | X2                                                           | X1                                                           |
-| LVDS                | X1                                                           | X1                                                           |
-| EDP                 | X1                                                           | N                                                            |
+| HDMI OUT            | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          |
+| MIPI DSI            | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
+| LVDS                | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
+| EDP                 | X1（up to 2560x1600@60Hz ）                                  | N                                                            |
 | MIPI Camera         | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
 | SPK                 | Y                                                            | Y                                                            |
 | HeadPhone           | Y                                                            | N                                                            |
