--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -28,7 +28,7 @@
 | LVDS                | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
 | EDP                 | X1（up to 2560x1600@60Hz ）                                  | N                                                            |
 | MIPI Camera         | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
-| SPK                 | Y                                                            | Y                                                            |
+| SPK                 | Y（Max Power 5W）                                            | Y（Max Power 5W）                                            |
 | HeadPhone           | Y                                                            | N                                                            |
 | MIC                 | Y                                                            | N                                                            |
 | WIFI/BlueTooth      | Y（RTL8822CS）                                               | Y（RTL8822CS）                                               |
