--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -13,11 +13,10 @@
 | SIZE                |                                                              |                                                              |
 | Weight              |                                                              |                                                              |
 | POWER               | DC 12V                                                       | Type-C 5V                                                    |
-| FAN                 | Y                                                            | N                                                            |
+| FAN                 | Y（5V Power）                                                | N                                                            |
 | LED                 | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
-| USB3.0 HOST         | X1                                                           | X2                                                           |
-| USB2.0 HOST         | X1                                                           | N                                                            |
-| USB2.0 OTG          | X1                                                           | X1                                                           |
+| USB HOST            | USB2.0 HOST X1 + USB3.0 HOST X1                              | USB3.0 HOST X2                                               |
+| USB OTG             | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
 | IR Receiver         | Y                                                            | N                                                            |
 | RTC                 | Y（HYM8563）                                                 | N                                                            |
 | DEBUG UART          | Y                                                            | Y                                                            |
