--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -10,7 +10,7 @@
 | DDR                 | 2G/4G                                                        | 2G/4G                                                        |
 | EMMC                | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
 | SYSTEM              | Android13.0 / Debian11 / Ubuntu2204                          | Android13.0 / Debian11 / Ubuntu2204                          |
-| SIZE                |                                                              |                                                              |
+| PCB SIZE            |                                                              |                                                              |
 | Weight              |                                                              |                                                              |
 | POWER               | DC 12V                                                       | Type-C 5V                                                    |
 | FAN                 | Y（5V Power）                                                | N                                                            |
