--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -1,9 +1,9 @@
 # 00-开发板功能列表
 
-| Function            | K1                                                           | K1B                                                          |
+| 功能列表            | K1                                                           | K1B                                                          |
 | ------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| APPEARANCE          |                                                              |                                                              |
-| SOC                 | RK3568B2                                                     | RK3568B2                                                     |
+| 外观                |                                                              |                                                              |
+| 主控                | RK3568B2                                                     | RK3568B2                                                     |
 | CPU                 | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
 | GPU                 | Mali G52                                                     | Mali G52                                                     |
 | NPU                 | 0.8Tops                                                      | 0.8Tops                                                      |
