--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -7,12 +7,12 @@
 | CPU                 | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
 | GPU                 | Mali G52                                                     | Mali G52                                                     |
 | NPU                 | 0.8Tops                                                      | 0.8Tops                                                      |
-| DDR                 | 2G/4G                                                        | 2G/4G                                                        |
-| EMMC                | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
-| SYSTEM              | Android13.0 / Debian11 / Ubuntu2204                          | Android13.0 / Debian11 / Ubuntu2204                          |
-| PCB SIZE            |                                                              |                                                              |
-| Weight              |                                                              |                                                              |
-| POWER               | DC 12V                                                       | Type-C 5V                                                    |
+| 内存                | 2G/4G                                                        | 2G/4G                                                        |
+| 存储                | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
+| 系统                | Android13.0 / Debian11 / Ubuntu2204                          | Android13.0 / Debian11 / Ubuntu2204                          |
+| PCB尺寸             |                                                              |                                                              |
+| 重量                |                                                              |                                                              |
+| 电源供电            | DC 12V                                                       | Type-C 5V                                                    |
 | FAN                 | Y（5V Power）                                                | N                                                            |
 | LED                 | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
 | USB HOST            | USB2.0 HOST X1 + USB3.0 HOST X1                              | USB3.0 HOST X2                                               |
