--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -13,15 +13,15 @@
 | PCB尺寸             |                                                              |                                                              |
 | 重量                |                                                              |                                                              |
 | 电源供电            | DC 12V                                                       | Type-C 5V                                                    |
-| FAN                 | Y（5V Power）                                                | N                                                            |
-| LED                 | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
+| 散热风扇            | Y（5V Power）                                                | N                                                            |
+| LED灯               | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
 | USB HOST            | USB2.0 HOST X1 + USB3.0 HOST X1                              | USB3.0 HOST X2                                               |
 | USB OTG             | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
-| IR Receiver         | Y                                                            | N                                                            |
+| IR接收器            | Y                                                            | N                                                            |
 | RTC                 | Y（HYM8563）                                                 | N                                                            |
 | DEBUG UART          | Y                                                            | Y                                                            |
-| KEY                 | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
-| Extend Pin          | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
+| 按键                | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
+| 扩展引脚            | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
 | HDMI OUT            | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          |
 | MIPI DSI            | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
 | LVDS                | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
