--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -1,39 +1,39 @@
 # 00-开发板功能列表
 
-| 功能列表            | K1                                                           | K1B                                                          |
-| ------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 外观                |                                                              |                                                              |
-| 主控                | RK3568B2                                                     | RK3568B2                                                     |
-| CPU                 | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
-| GPU                 | Mali G52                                                     | Mali G52                                                     |
-| NPU                 | 0.8Tops                                                      | 0.8Tops                                                      |
-| 内存                | 2G/4G                                                        | 2G/4G                                                        |
-| 存储                | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
-| 系统                | Android13.0 / Debian11 / Ubuntu2204                          | Android13.0 / Debian11 / Ubuntu2204                          |
-| PCB尺寸             |                                                              |                                                              |
-| 重量                |                                                              |                                                              |
-| 电源供电            | DC 12V                                                       | Type-C 5V                                                    |
-| 散热风扇            | Y（5V Power）                                                | N                                                            |
-| LED灯               | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
-| USB HOST            | USB2.0 HOST X1 + USB3.0 HOST X1                              | USB3.0 HOST X2                                               |
-| USB OTG             | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
-| IR接收器            | Y                                                            | N                                                            |
-| RTC                 | Y（HYM8563）                                                 | N                                                            |
-| DEBUG UART          | Y                                                            | Y                                                            |
-| 按键                | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
-| 扩展引脚            | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
-| HDMI OUT            | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          |
-| MIPI DSI            | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
-| LVDS                | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
-| EDP                 | X1（up to 2560x1600@60Hz ）                                  | N                                                            |
-| MIPI Camera         | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
-| SPK                 | Y（Max Power 5W）                                            | Y（Max Power 5W）                                            |
-| HeadPhone           | Y                                                            | N                                                            |
-| MIC                 | Y                                                            | N                                                            |
-| WIFI/BlueTooth      | Y（RTL8822CS）                                               | Y（RTL8822CS）                                               |
-| Ethernet            | 1000M X2                                                     | 1000M X1                                                     |
-| MINI PCIE Mobile 4G | Y（EC20）                                                    | N                                                            |
-| SD Card             | Y                                                            | Y                                                            |
-| SATA3.0             | Y                                                            | N                                                            |
-| M.2 PCIE3.0 SSD     | Y                                                            | N                                                            |
+| 功能列表        | K1                                                           | K1B                                                          |
+| --------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 外观            |                                                              |                                                              |
+| 主控            | RK3568B2                                                     | RK3568B2                                                     |
+| CPU             | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
+| GPU             | Mali G52                                                     | Mali G52                                                     |
+| NPU             | 0.8Tops                                                      | 0.8Tops                                                      |
+| 内存            | 2G/4G                                                        | 2G/4G                                                        |
+| 存储            | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
+| 系统            | Android13.0 / Debian11 / Ubuntu2204                          | Android13.0 / Debian11 / Ubuntu2204                          |
+| PCB尺寸         |                                                              |                                                              |
+| 重量            |                                                              |                                                              |
+| 电源供电        | DC 12V                                                       | Type-C 5V                                                    |
+| 散热风扇        | Y（5V Power）                                                | N                                                            |
+| LED灯           | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
+| USB HOST        | USB2.0 HOST X1 + USB3.0 HOST X1                              | USB3.0 HOST X2                                               |
+| USB OTG         | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
+| IR接收器        | Y                                                            | N                                                            |
+| RTC             | Y（HYM8563）                                                 | N                                                            |
+| DEBUG UART      | Y                                                            | Y                                                            |
+| 按键            | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
+| 扩展引脚        | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
+| HDMI输出        | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          |
+| MIPI DSI        | X2（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
+| LVDS            | X1（up to 1920x1080@60Hz ）                                  | X1（up to 1920x1080@60Hz ）                                  |
+| EDP             | X1（up to 2560x1600@60Hz ）                                  | N                                                            |
+| MIPI摄像头      | 4Lane X1 or 2Lane X2                                         | 4Lane X1 or 2Lane X2                                         |
+| 喇叭            | Y（Max Power 5W）                                            | Y（Max Power 5W）                                            |
+| 耳机            | Y                                                            | N                                                            |
+| 麦克风          | Y                                                            | N                                                            |
+| WIFI/蓝牙       | Y（RTL8822CS）                                               | Y（RTL8822CS）                                               |
+| 以太网          | 1000M X2                                                     | 1000M X1                                                     |
+| 4G移动网络      | Y（EC20）                                                    | N                                                            |
+| SD Card         | Y                                                            | Y                                                            |
+| SATA3.0         | Y                                                            | N                                                            |
+| M.2 PCIE3.0 SSD | Y                                                            | N                                                            |
 
