--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -18,8 +18,8 @@
 | USB HOST            | USB2.0 HOST X1 + USB3.0 HOST X1                              | USB3.0 HOST X2                                               |
 | USB OTG             | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
 | IR接收器            | Y                                                            | N                                                            |
-| RTC                 | Y（HYM8563）                                                 | N                                                            |
-| DEBUG UART          | Y                                                            | Y                                                            |
+| 实时时钟            | Y（HYM8563）                                                 | N                                                            |
+| 调试串口            | Y                                                            | Y                                                            |
 | 按键                | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
 | 扩展引脚            | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
 | HDMI显示接口        | X1（up to 4K@60Hz）                                          | X1（up to 4K@60Hz）                                          |
