--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -15,7 +15,7 @@
 | 电源供电            | DC 12V                                                       | Type-C 5V                                                    |
 | 散热风扇            | Y（5V Power）                                                | N                                                            |
 | LED灯               | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
-| USB HOST            | USB2.0 HOST X1 + USB3.0 HOST X1                              | USB3.0 HOST X2                                               |
+| USB HOST            | * USB2.0 HOST X1<br />* USB3.0 HOST X1                       | USB3.0 HOST X2                                               |
 | USB OTG             | USB2.0 OTG X1                                                | USB2.0 OTG X1                                                |
 | IR接收器            | Y                                                            | N                                                            |
 | 实时时钟            | Y（HYM8563）                                                 | N                                                            |
