--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -24,7 +24,7 @@ RK3568 开发板显示接口图片
 
 
 
-|           |                |                  |
+| 显示接口  | 显示最大分辨率 | 格式             |
 | --------- | -------------- | ---------------- |
 | HDMI      | 4096x2160@60Hz | RGB/YUV420 10Bit |
 | MIPI      | 1920x1080@60Hz | RGB 8Bit         |
