--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -20,8 +20,6 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-RK3568 开发板显示接口图片
-
 | 显示接口  | 显示最大分辨率 | 格式             |
 | --------- | -------------- | ---------------- |
 | HDMI      | 4096x2160@60Hz | RGB/YUV420 10Bit |
@@ -37,31 +35,25 @@ RK3568 开发板显示接口图片
 
 ## 单显示屏驱动配置
 
+显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录
+
+```
+kernel/arch/arm64/boot/dts/rockchip/
+```
+
+
+
 ### MIPI
 
-**1. 获取屏幕关键参数、初始化数组**
+参考
 
-屏幕分辨率
+rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi   
 
-MIPI 信号通道数
+rk3568-kickpi-lcd-lvds-7-1024-600.dtsi      
 
+rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi
 
-
-**2. 查看硬件原理图关键引脚序号**
-
-PWM背光引脚
-
-MIPI DSI通道序号
-
-LCD使能/复位引脚
-
-
-
-**3. 设备树配置**
-
-
-
-
+rk3568-kickpi-lcd-mipi0-10.1-800-1280.dtsi 
 
 ### LVDS
 
