--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -45,15 +45,19 @@ kernel/arch/arm64/boot/dts/rockchip/
 
 ### MIPI
 
-参考
+RK3568 有两路MIPI LCD，分别为MIPI0、MIPI1，其中MIPI0与LVDS复用
+
+MIPI0接口 参考 rk3568-kickpi-lcd-mipi0-10.1-800-1280.dtsi 
+
+MIPI1接口 参考 rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi
+
+
 
 rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi   
 
 rk3568-kickpi-lcd-lvds-7-1024-600.dtsi      
 
-rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi
 
-rk3568-kickpi-lcd-mipi0-10.1-800-1280.dtsi 
 
 ### LVDS
 
