--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -53,19 +53,15 @@ MIPI1接口 参考 rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi
 
 
 
-rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi   
-
-rk3568-kickpi-lcd-lvds-7-1024-600.dtsi      
-
-
-
 ### LVDS
+
+rk3568-kickpi-lcd-lvds-7-1024-600.dtsi
 
 
 
 ### EDP
 
-
+EDP接口 参考 rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi   
 
 
 
