--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -55,7 +55,7 @@ MIPI1接口 参考 rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi
 
 ### LVDS
 
-rk3568-kickpi-lcd-lvds-7-1024-600.dtsi
+LVDS接口 参考 rk3568-kickpi-lcd-lvds-7-1024-600.dtsi
 
 
 
