--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -35,7 +35,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 ## 单显示屏驱动配置
 
-显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录
+显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录如下：
 
 ```
 kernel/arch/arm64/boot/dts/rockchip/
