--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -78,7 +78,7 @@ EDP接口 参考 rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi
 ### 内核设备树配置
 
 ```
-$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
+$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 //#include "rk3568-kickpi-lcd-edp.dtsi"
 //#include "rk3568-kickpi-lcd-mipi0.dtsi"
