--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -89,6 +89,15 @@ $ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
+```
+rk3568-kickpi-triple-lcd-edp-mipi1-lvds.dtsi
+rk3568-kickpi-triple-lcd-hdmi-mipi1-lvds.dtsi
+```
+
+
+
+
+
 ### Android多屏显示应用程序开发
 
 * DSI作为主屏，HDMI-A作为副屏
