--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -38,7 +38,18 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录如下：
 
 ```
-kernel/arch/arm64/boot/dts/rockchip/
+$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
+
+// LCD
+//#include "rk3568-kickpi-lcd-hdmi.dtsi"
+//#include "rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi"
+//#include "rk3568-kickpi-lcd-mipi0-10.1-800-1280.dtsi"
+#include "rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi"
+//#include "rk3568-kickpi-lcd-lvds-7-1024-600.dtsi"
+
+// Triple LCD
+//#include "rk3568-kickpi-triple-lcd-hdmi-mipi1-lvds.dtsi"
+//#include "rk3568-kickpi-triple-lcd-edp-mipi1-lvds.dtsi"
 ```
 
 > 若显示屏调试有问题，可联系售后 获取技术支持
