--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -52,7 +52,7 @@ $ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 //#include "rk3568-kickpi-triple-lcd-edp-mipi1-lvds.dtsi"
 ```
 
-> 若显示屏调试有问题，可联系售后 获取技术支持
+> 若显示屏调试有问题，可联系售后，获取技术支持
 
 
 
