--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -78,7 +78,9 @@ EDP接口 参考 rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi
 
 ## 多屏显示系统配置
 
-多屏显示方案中，推荐选择多款分辨率比例一致的显示屏，否则会出现画面拉伸或者画面黑边
+多屏显示方案中，LCD参数选择注意事项：
+
+推荐选择显示长宽比例一致的显示屏，否则会出现画面拉伸或者画面黑边
 
 
 
@@ -92,14 +94,7 @@ $ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 //#include "rk3568-kickpi-triple-lcd-edp-mipi1-lvds.dtsi"
 ```
 
-
-
-```
-rk3568-kickpi-triple-lcd-edp-mipi1-lvds.dtsi
-rk3568-kickpi-triple-lcd-hdmi-mipi1-lvds.dtsi
-```
-
-
+> 
 
 
 
