--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -94,7 +94,7 @@ $ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 //#include "rk3568-kickpi-triple-lcd-edp-mipi1-lvds.dtsi"
 ```
 
-> 
+> 在完成单屏调试的基础上，参考以上提供的多屏设备树配置文件
 
 
 
