--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -98,7 +98,7 @@ $ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1a.dtsi
 
 
 
-### Android多屏显示应用程序开发
+### Android多屏配置
 
 * DSI作为主屏，HDMI-A作为副屏
 
@@ -115,10 +115,6 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 ```
 
 
-
-### Linux多屏显示配置
-
-示例方案：HDMI + MIPI1 + LVDS
 
 
 
