--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -136,7 +136,9 @@ I2C + I2C
 
 ### Android单屏触摸配置
 
-* Android11.0 仅主屏触摸，禁止副屏触摸
+* Android13.0
+
+禁止副屏触摸，不论external 或 internal类型设备，都作用在主屏
 
 ```
 $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
@@ -145,18 +147,6 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
     if (isExternalDeviceLocked(device)) {
 -        device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
 +        //device->classes |= INPUT_DEVICE_CLASS_EXTERNAL;
-    }
-```
-
-* Android13.0 仅主屏触摸，禁止副屏触摸
-
-```
-$ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
-
-	// Determine whether the device is external or internal.
-    if (device->isExternalDeviceLocked()) {
--        device->classes |= InputDeviceClass::EXTERNAL;
-+        //device->classes |= InputDeviceClass::EXTERNAL;
     }
 ```
 
