--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -306,6 +306,22 @@ $ cheese
 
 
 
+## 14. PWM
+
+### 用户层配置PWM输出
+
+示例：设置PWM3通道，周期10000ns，占空比5000ns，极性为normal
+
+```
+$ echo 0 > /sys/class/pwm/pwmchip0/export
+$ echo 10000 > /sys/class/pwm/pwmchip0/pwm0/period
+$ echo 5000 > /sys/class/pwm/pwmchip0/pwm0/duty_cycle
+$ echo normal > /sys/class/pwm/pwmchip0/pwm0/polarity
+$ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
+```
+
+
+
 
 
 ## 16. GPU
