--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -124,7 +124,7 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ## 6. PWM
 
-
+RK3568 有4个PWM模块，每个PWM模块有4路PWM，一共有16路PWM
 
 ### 用户层配置PWM输出
 
@@ -137,6 +137,10 @@ $ echo 5000 > /sys/class/pwm/pwmchip0/pwm0/duty_cycle
 $ echo normal > /sys/class/pwm/pwmchip0/pwm0/polarity
 $ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
 ```
+
+
+
+
 
 
 
