--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -128,6 +128,12 @@ RK3568 有4个PWM模块，每个PWM模块有4路PWM，一共有16路PWM
 
 ### 用户层配置PWM输出
 
+Extend 40Pin接口 包含多路PWM，以PWM3通道为例，按照以下命令进入PWM配置
+
+按照示例配置参数设置成功后，可用万用表测量PWM3引脚，正确电压应为1.6V左右
+
+
+
 示例：设置PWM3通道，周期10000ns，占空比5000ns，极性为normal
 
 ```
