--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -468,6 +468,10 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage3_raw
 
 RK3566 开机默认开启开门狗，内核线程自动喂狗
 
+
+
+### 用户层配置手动喂狗
+
 可用以下命令修改为用户层手动喂狗，并且每44秒必须重复执行以下命令喂狗，否则系统重启
 
 ```
