--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -466,7 +466,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage3_raw
 
 ## 20. WatchDog
 
-RK3566 开机默认开启开门狗，内核线程自动喂狗
+RK3568配备一路看门狗，上电默认开启开门狗，内核线程自动喂狗
 
 
 
