--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -4,7 +4,7 @@
 
 
 
-## 显示接口资源介绍
+## 1. 显示接口资源介绍
 
 RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
 
@@ -33,7 +33,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-## 单显示屏驱动配置
+## 2. 单显示屏驱动配置
 
 显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录如下：
 
@@ -76,7 +76,7 @@ EDP接口 参考 rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi
 
 
 
-## 多屏显示系统配置
+## 3. 多屏显示系统配置
 
 多屏显示方案中，LCD参数选择注意事项：
 
@@ -116,7 +116,7 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 
 
-## 单触摸屏驱动配置
+## 4. 单触摸屏驱动配置
 
 
 
@@ -124,7 +124,7 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 
 
-## 多屏触摸系统配置
+## 5. 多屏触摸系统配置
 
 ### 内核设备树配置
 
