--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -7,8 +7,8 @@
 | 外观                |                                                              |                                                              |
 | PCB尺寸             |                                                              |                                                              |
 | 重量                |                                                              |                                                              |
-| 主控                | RK3568B2                                                     | RK3568B2                                                     |
-| CPU                 | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
+| 主控                | Rockchip RK3568B2                                            | Rockchip RK3568B2                                            |
+| CPU                 | 四核Cortex-A55                                               | 四核Cortex-A55                                               |
 | GPU                 | Mali G52                                                     | Mali G52                                                     |
 | NPU                 | 0.8Tops                                                      | 0.8Tops                                                      |
 | 内存                | 2G/4G                                                        | 2G/4G                                                        |
