--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -9,10 +9,10 @@
 | 重量                |                                                              |                                                              |
 | 主控                | Rockchip RK3568B2                                            | Rockchip RK3568B2                                            |
 | CPU                 | 四核Cortex-A55                                               | 四核Cortex-A55                                               |
-| GPU                 | Mali G52                                                     | Mali G52                                                     |
-| NPU                 | 0.8Tops                                                      | 0.8Tops                                                      |
-| 内存                | 2G/4G                                                        | 2G/4G                                                        |
-| 存储                | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
+| GPU                 | Mali G52 2EE                                                 | Mali G52 2EE                                                 |
+| NPU                 | RKNN 0.8Tops                                                 | RKNN 0.8Tops                                                 |
+| 内存                | 2G / 4G                                                      | 2G / 4G                                                      |
+| 存储                | 8G / 16G / 32G                                               | 8G / 16G / 32G                                               |
 | 系统                | Android13.0 / Debian11 / Ubuntu2204                          | Android13.0 / Debian11 / Ubuntu2204                          |
 | 电源供电            | DC 12V                                                       | Type-C 5V                                                    |
 | 散热风扇            | Y（5V Power）                                                | N                                                            |
