--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -130,6 +130,12 @@ RK3566 TX66 配套5V适配器
 
 镜像烧录工具网盘目录：4-开发工具\USB镜像烧录工具\RKDevTool\_Release\_v2.96.zip
 
+
+
+![image-20231017111858559](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231017111858559.png)
+
+
+
 ![image-20230526154741821](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154741821.png)
 
 
