--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -102,6 +102,10 @@ RK3566 TX66 配套5V适配器
 │       ├── Android13
 │       ├── Debian11
 │       └── Ubuntu2004
+│   └── RK3568-K1
+│       ├── Android13
+│       ├── Debian11
+│       └── Ubuntu2004
 ├── 3-Hardware Data 硬件资料
 └── 4-Development Tools 开发工具
     ├── ADB Tool
@@ -127,10 +131,6 @@ RK3566 TX66 配套5V适配器
     ├── USB Driver USB驱动
     └── USB Image Burn Tool 镜像烧录工具
 ```
-
-
-
-
 
 
 
