--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -127,6 +127,11 @@ RK3566 TX66 配套5V适配器
 ### 下载准备工具
 
 ```
+├── 2-System Image 系统镜像
+│   └── RK3568-K1
+│       ├── Android13
+│       ├── Debian11
+│       └── Ubuntu2004
 └── 4-Development Tools 开发工具
     ├── USB Driver USB驱动
     └── USB Image Burn Tool 镜像烧录工具
