--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -126,6 +126,8 @@ RK3566 TX66 配套5V适配器
 
 ### 下载准备工具
 
+镜像烧录 准备工具如下所示
+
 ```
 ├── 2-System Image 系统镜像
 │   └── RK3568-K1
@@ -136,6 +138,10 @@ RK3566 TX66 配套5V适配器
     ├── USB Driver USB驱动
     └── USB Image Burn Tool 镜像烧录工具
 ```
+
+> 镜像烧录 必须下载 USB驱动、镜像烧录工具
+>
+> 系统镜像 可根据实际需要选择下载 或 自行通过SDK编译
 
 
 
