--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -151,6 +151,14 @@ RK3566 TX66 配套5V适配器
 
 
 
+1. 通过网盘下载镜像烧录工具后，解压文件夹，得到以下目录列表
+
+
+
+
+
+2. 
+
 ![image-20231017111858559](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231017111858559.png)
 
 
