--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -155,9 +155,13 @@ RK3566 TX66 配套5V适配器
 
 
 
-
-
 2. 修改镜像烧录工具语言
+
+默认镜像烧录工具为中文界面，可按照如下所示修改为英文界面
+
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231010202819610.png)
+
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231010203036869.png)
 
 
 
