--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -218,6 +218,14 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ### 烧录工具使用
 
+烧录镜像 分为 完整镜像烧录 和 分区镜像烧录
+
+完整镜像烧录 常用于刷机 或 开发板更换不同系统
+
+分区镜像烧录 常用于调试阶段，必须明确每个分区的作用再进行烧录，否则会导致系统损坏
+
+
+
 #### 烧录完整镜像
 
 ![image-20230519111357204](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519111357204.png)
