--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -204,7 +204,13 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ### 开发板进入烧录模式(Pic)
 
-烧录镜像 必须使开发板进入烧录模式
+烧录镜像 必须使开发板进入烧录模式，Rockchip平台的烧录模式有LOADER模式、Maskrom模式
+
+LOADER模式 常用于完整镜像烧录、分区烧录皆可
+
+Maskrom模式 常用于系统损坏后，强制烧录镜像
+
+
 
 操作步骤：
 
