--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -2,23 +2,23 @@
 
 
 
-## 1. 入门介绍
 
-### CPU基本信息
 
-#### RK3566
+## CPU基本信息
+
+### RK3566
 
 ![rk3566基本信息](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3566bd.png)
 
 
 
-#### RK3568
+### RK3568
 
 ![rk3568基本信息](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3568bd.png)
 
 
 
-### 开发板硬件(Pic)
+## 开发板基本信息(Pic)
 
 板卡照片（带功能标注）
 
@@ -113,7 +113,6 @@ RK3566 TX66 配套5V适配器
     ├── USB Driver USB驱动
     └── USB Image Burn Tool 镜像烧录工具
 ```
-
 
 
 
