--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -24,23 +24,23 @@
 
 
 
-#### RK3566-TX66
+### RK3566-TX66
 
 ![rk3566-tx66](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926172750849.png)
 
-#### RK3568-K1
+### RK3568-K1
 
 
 
 
 
-#### RK3568-K1B
+### RK3568-K1B
 
 
 
 
 
-### 配件说明(Pic)
+## 配件说明(Pic)
 
 常用配件有适配器、USB烧录线、调试串口线，其他配件可自行选购
 
@@ -78,7 +78,7 @@ RK3566 TX66 配套5V适配器
 
 
 
-### 网盘资料
+## 网盘资料
 
 **百度网盘地址**：https://pan.baidu.com/s/1erEpYjwWEEczJcgJJmrhjQ?pwd=1234   提取码：1234
 
