--- a/rk356x/zh/04-硬件功能测试.md
+++ b/rk356x/zh/04-硬件功能测试.md
@@ -292,11 +292,21 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
-### * MIPI硬件接线（Pic）
+### * MIPI屏硬件接线（Pic）
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
 
+
+### * LVDS屏硬件接线（Pic）
+
+> 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
+
+
+
+### * eDP屏硬件接线（Pic）
+
+> 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
 
 
