--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -84,6 +84,8 @@ RK3566 TX66 配套5V适配器
 
 **OneDrive网盘地址**：https://1drv.ms/f/s!AuVepzkLS2sQg40ELt1V77H-aKn_Sw?e=womwYI
 
+[baidu](www.baidu.com)
+
 
 
 * 网盘目录说明
