--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -122,7 +122,7 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 ## 5. 技术交流/售后支持
 
-**KICKPI 官方店铺链接**
+### KICKPI 官方店铺链接
 
 [淘宝店铺链接](https://shop183733283.taobao.com/?spm=a230r.7195193.1997079397.2.10f76f498zHqMG)
 
@@ -130,13 +130,13 @@ KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDri
 
 
 
-**客服QQ号**：1965516829
+### 客服QQ号
 
 ![image-20231018142716705](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231018142716705.png)
 
 
 
-**技术交流QQ群**：541550817
+### 技术交流QQ群
 
 ![image-20231018142017914](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231018142017914.png)
 
