--- a/rk356x/zh/04-硬件功能测试.md
+++ b/rk356x/zh/04-硬件功能测试.md
@@ -8,6 +8,10 @@
 
 ### K1引脚列表
 
+![lQDPJwdL80_ad8TNIJ3NPi2w1GhOJ6gVEfcFI3nfzUimAA_15917_8349](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/lQDPJwdL80_ad8TNIJ3NPi2w1GhOJ6gVEfcFI3nfzUimAA_15917_8349.jpg)
+
+
+
 
 
 ### K1B引脚列表
