--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -36,6 +36,6 @@
 | 以太网              | 1000M X2                                                     | 1000M X1                                                     |
 | 4G移动网络          | Y（EC20）                                                    | N                                                            |
 | SD卡                | Y                                                            | Y                                                            |
-| SATA3.0硬盘         | Y                                                            | N                                                            |
+| SATA硬盘            | Y                                                            | N                                                            |
 | M.2 PCIE3.0 SSD硬盘 | Y                                                            | N                                                            |
 
