--- a/rk356x/zh/05-硬件工厂测试.md
+++ b/rk356x/zh/05-硬件工厂测试.md
@@ -41,4 +41,13 @@
 
 
 
-![screen](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/screen.png)
+![image-20231021140316771](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021140316771.png)
+
+
+
+
+
+## 硬件测试程序使用说明
+
+
+
