--- a/rk356x/zh/05-硬件工厂测试.md
+++ b/rk356x/zh/05-硬件工厂测试.md
@@ -23,11 +23,7 @@
 
 
 
-
-
-
-
-![screen](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/screen.png)
+![image-20231021142642942](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021142642942.png)
 
 
 
