--- a/rk356x/zh/04-硬件功能使用说明.md
+++ b/rk356x/zh/04-硬件功能使用说明.md
@@ -298,7 +298,13 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 ### * MIPI屏硬件接线（Pic）
 
-排线参数：30Pin、同向
+**排线要求**
+
+引脚数30Pin、排线方向为同向
+
+> 建议使用随屏附赠排线，否则有可能会导致屏幕损坏
+
+
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
@@ -306,7 +312,13 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 ### * LVDS屏硬件接线（Pic）
 
-排线参数：30Pin、同向
+**排线要求**
+
+引脚数30Pin、排线方向为同向
+
+> 建议使用随屏附赠排线，否则有可能会导致屏幕损坏
+
+
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
@@ -314,11 +326,15 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 ### * eDP屏硬件接线（Pic）
 
-排线参数：30Pin、同向
+**排线要求**
+
+引脚数30Pin、排线方向为同向
+
+> 建议使用随屏附赠排线，否则有可能会导致屏幕损坏
+
+
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
-
-
 
 
 
@@ -327,6 +343,14 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 ## 13. MIPI CAMERA
 
 ### *硬件接线（Pic）
+
+**排线要求**
+
+引脚数40Pin、排线方向为反向
+
+> 建议使用随屏附赠排线，否则有可能会导致屏幕损坏
+
+
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
