--- a/rk356x/zh/04-硬件功能使用说明.md
+++ b/rk356x/zh/04-硬件功能使用说明.md
@@ -306,6 +306,8 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
+![image-20231021170724701](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021170724701.png)
+
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
 
@@ -319,6 +321,8 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 > 建议使用随屏附赠排线，否则有可能会导致屏幕损坏
 
 
+
+![image-20231021170902215](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021170902215.png)
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
