--- a/rk356x/zh/04-硬件功能使用说明.md
+++ b/rk356x/zh/04-硬件功能使用说明.md
@@ -306,6 +306,8 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
+**接线示例图**
+
 ![image-20231021170724701](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021170724701.png)
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
@@ -322,7 +324,9 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
-![image-20231021170902215](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021170902215.png)
+**接线示例图**
+
+![image-20231021171105002](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021171105002.png)
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
@@ -338,7 +342,13 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
+**接线示例图**
+
+![image-20231021171209133](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231021171209133.png)
+
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
+>
+> EDP屏 必须在屏端额外接12V电源
 
 
 
