--- a/rk356x/zh/04-硬件功能使用说明.md
+++ b/rk356x/zh/04-硬件功能使用说明.md
@@ -296,7 +296,7 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
-### * MIPI屏硬件接线（Pic）
+### MIPI屏硬件接线
 
 **排线要求**
 
@@ -314,7 +314,7 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
-### * LVDS屏硬件接线（Pic）
+### LVDS屏硬件接线
 
 **排线要求**
 
@@ -332,7 +332,7 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 
 
-### * eDP屏硬件接线（Pic）
+### eDP屏硬件接线
 
 **排线要求**
 
@@ -363,6 +363,8 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 引脚数40Pin、排线方向为反向
 
 > 建议使用随屏附赠排线，否则有可能会导致屏幕损坏
+
+
 
 
 
