--- a/rk356x/zh/02-镜像烧录.md
+++ b/rk356x/zh/02-镜像烧录.md
@@ -49,12 +49,18 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ```
 ├── 2-System Image 系统镜像
-    └── RK3566-TX66
-        ├── Android11-TV
+    └── RK3568-K1
         ├── Android13
+        	├── update-rk3568-kickpi-k1-android-hdmi-2023102403.img
         ├── Debian11
         └── Ubuntu2004
 ```
+
+
+
+镜像名称解析
+
+![image-20231024111614065](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231024111614065.png)
 
 
 
