--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -4,7 +4,13 @@
 
 
 
-## 1. CPU基本信息
+## 1. CPU信息
+
+### RK3562
+
+![image-20231214152205552](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231214152205552.png)
+
+
 
 ### RK3566
 
@@ -18,61 +24,29 @@
 
 
 
-## 2. 开发板基本信息(Pic)
+## 2. 开发板信息
 
-板卡照片（带功能标注）
+### RK3568 K1
+
+![image-20231214155147080](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231214155147080.png)
 
 
 
-### RK3566-TX66
-
-![rk3566-tx66](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926172750849.png)
-
-### RK3568-K1
+### RK3568 K1B
 
 
 
 
 
-### RK3568-K1B
 
 
 
 
+## 3. 配件信息
 
-## 3. 配件说明(Pic)
+常用配件有适配器、USB烧录线、调试串口线 等可自行选购
 
-常用配件有适配器、USB烧录线、调试串口线，其他配件可自行选购
-
-
-
-**电源适配器**
-
-RK3568 K1 配套12V适配器
-
-RK3566 TX66 配套5V适配器
-
-> 建议使用随机附带的适配器，否则可能导致硬件损坏
-
-
-
-**USB AtoC烧录线**
-
-配件连接图片
-
-
-
-**调试串口线**
-
-硬件配件连接图片
-
-
-
-**显示/触摸屏**
-
-
-
-**MIPI摄像头**
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01kcjuvi29djTNDfOhy_!!2216870748091.jpg)
 
 
 
