--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -34,7 +34,7 @@
 
 ### RK3568 K1B
 
-
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01gkMedU29djTdYp9KH_!!2216870748091.jpg)
 
 
 
@@ -49,6 +49,8 @@
 ![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01kcjuvi29djTNDfOhy_!!2216870748091.jpg)
 
 
+
+![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01fnKIlL29djThiLgdR_!!2216870748091.jpg)
 
 
 
