--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -4,7 +4,7 @@
 
 | 功能列表       | K1                                                           | K1B                                                          |
 | -------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 外观           |                                                              | ![image-20231228111520653](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231228111520653.png) |
+| 外观           | ![image-20231228111602702](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231228111602702.png) | ![image-20231228111520653](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231228111520653.png) |
 | PCB尺寸        | 141mm * 80mm                                                 | 81mm * 55mm                                                  |
 | 重量           |                                                              |                                                              |
 | 主控           | Rockchip RK3568B2                                            | Rockchip RK3568B2                                            |
